# NHPC-parliament-rag-system-

./: .env.example  .gitignore  HANDOFF.md  README.md  README_phase1.md  pyproject.toml  requirements-serve.txt  requirements.txt
deploy/: .env.production.example  README_DEPLOY.md  bootstrap.sh  build-offline-bundle.sh  preflight.sh
deploy/langfuse/: .env.langfuse.example  README.md  docker-compose.yml
deploy/models/: .env.models.example  docker-compose.yml
deploy/postgres/: .env.postgres.example  docker-compose.yml  pgadmin-servers.json
deploy/systemd/: nhpc-api.service  nhpc-bootstrap.service  nhpc-purge.service  nhpc-purge.timer  nhpc-watch.service
experiments/answer_embeddings/: after_flag_on.json  before_baseline.json  capture.py  compare.py  comparison_report.txt  recheck_flag_off.json
experiments/prod_readiness/: REPORT.md  dataset.py  dataset_v1.json  report.py  results_after.json  results_after.jsonl  results_before.json  results_before.jsonl  run_drafts.py  (+7 more)
migrations/: 004_watcher_queue_and_soft_delete.sql  005_auth_users_sessions.sql  006_upload_audit.sql  007_auth_audit_upload_events.sql  008_worker_heartbeat.sql  009_tree_delete_audit.sql  010_reply_date.sql  011_reply_date_single_column.sql  012_supporting_documents.sql  013_supporting_audit_events.sql  014_supporting_hard_delete_event.sql  015_supporting_categories.sql  016_supporting_category_event.sql  017_entity_dictionary.sql  018_concept_synonyms.sql  019_verify_cache.sql  020_answer_embeddings.sql
nhpc_qa/: cli.py
phase2/: README.md  __init__.py  audit.py  config.py  extract.py  ir.py  layout.py  llm.py  pipeline.py  providers.py  reader.py  requirements.txt  routing.py  tables.py
phase3/: README.md  config.py  db.py  embed_runner.py  embeddings.py  inspect_db.py  loader.py  migrate.py
phase4/: README.md  config.py
scripts/: check_llm_backend.py
(+97 files in other folders)
